objects/Lease_Agreement__c/Lease_Agreement__c.object-meta.xml
<CustomObject>
    <description>Lease agreement signed between a tenant and a single property.</description>
    <label>Lease Agreement</label>
    <nameField>
        <displayFormat>LA-{00000}</displayFormat>
        <label>Lease Agreement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>