objects/Lease_Agreement__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tenant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Property_Contact__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Tenant</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Property_Contact__c</referenceTo>
    <relationshipLabel>Lease Agreements</relationshipLabel>
    <relationshipName>Lease_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>