objects/Lease_Agreement__c/fields/Monthly_Rent__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Rent__c</fullName>
    <label>Agreed Monthly Rent</label>
    <precision>14</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>