objects/Lease_Agreement__c/listViews/All_Lease_Agreements.listView-meta.xml
<ListView>
    <fullName>All_Lease_Agreements</fullName>
    <columns>NAME</columns>
    <columns>Property__c</columns>
    <columns>Tenant__c</columns>
    <columns>Monthly_Rent__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Lease Agreements</label>
</ListView>